<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/maybe_logo"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/maybe_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/ly_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="237dp"
        android:layout_height="57dp"
        android:layout_marginTop="82dp"
        android:background="@drawable/editext_style"
        android:textColorHint="@color/text_color"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/login_user"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maybe_logo"
        app:startIconDrawable="@drawable/ic_user_svgrepo_com">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/edt_username"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/editext_style"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="237dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/editext_style"
        android:textColorHint="@color/text_color"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/password"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        app:counterMaxLength="20"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_username"
        app:startIconDrawable="@drawable/ic_password_svgrepo_com">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/editext_style"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/login_check"
        android:layout_width="194dp"
        android:layout_height="53dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/boton_style"
        android:fontFamily="@font/helveticaboldoblique"
        android:text="@string/remember_user"
        android:textColor="@color/text_color"
        app:buttonTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="@+id/ly_password"
        app:layout_constraintStart_toStartOf="@+id/ly_password"
        app:layout_constraintTop_toBottomOf="@+id/ly_password" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/boton_style"
        android:fontFamily="@font/helveticaboldoblique"
        android:text="@string/sign_in"
        android:textColor="@color/text_color"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/login_check"
        app:layout_constraintStart_toStartOf="@+id/login_check"
        app:layout_constraintTop_toBottomOf="@+id/login_check" />


</androidx.constraintlayout.widget.ConstraintLayout>